[GEOS-9619] Java 8 recommendation (#4428)
* Java 8 recommendation

Signed-off-by: Jody Garnett <jody.garnett@gmail.com>

* Update doc/en/user/source/production/java.rst

Co-authored-by: Andrea Aime <andrea.aime@gmail.com>

Co-authored-by: Andrea Aime <andrea.aime@gmail.com>